welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var i = getMondeHauteur()
  var T = new Array [Color](i)
  for (j<- 0 to T.length-1) {
  m = getCouleurSol
  T(j) = m
  avance()
}
}

